--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,12 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
 #map {
   width: 100%;
-  height: 100vh; /* full screen */
+  height: 50vh;
 }
 
 .filters {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 5em;
+  right: 3em;
   background: white;
   padding: 10px;
   border-radius: 8px;
@@ -22,11 +17,4 @@ body {
 .filters select {
   margin: 5px 0;
   width: 150px;
-}
-
-.detail-box {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
